@@ -1,3 +1,9 @@
+06-08-31 Rene Fritz  <r.fritz@colorcube.de>
+
+	* Fix: Workaround added: delete function in navframe jumped to another submodule when that was called before the current submodule
+	* Fix: Delete function in list module works now
+	* Fix: non-admins don't get access to root elements in list module when clicking on the root icon in nav frame
+
 06-05-29 Rene Fritz  <r.fritz@colorcube.de>
 
 	* Fix: use of $GLOBALS['TYPO3_DB']->xxx
